[package]
name = "compress_comics"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
webp = "0.3"
zip = "4.3"
unrar = "0.5"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18"
anyhow = "1.0"
tempfile = "3.20"
crossbeam-channel = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
