[package]
name = "compress_comics"
version = "1.0.0"
edition = "2021"
authors = ["Erik Vullings <erik.vullings@gmail.com>"]
description = "High-performance comic book compression tool with WebP conversion supporting CBR, CBZ, and PDF formats"
license = "MIT"
repository = "https://github.com/erikvullings/compress_comics"
homepage = "https://github.com/erikvullings/compress_comics"
documentation = "https://docs.rs/compress_comics"
keywords = ["comic", "compression", "webp", "cbr", "pdf"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[dependencies]
rayon = "1.10"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
webp = "0.3"
zip = "4.3"
unrar = "0.5"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18"
anyhow = "1.0"
tempfile = "3.20"
crossbeam-channel = "0.5"
lopdf = "0.32"
flate2 = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
